# event-camera-drivers

./: CMakeLists.txt  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yml  install_libcaer.sh
src/cpp/: bindings.cpp  inivation.hpp
src/event_camera_drivers/: __init__.py
