[build-system]
requires = ["scikit-build-core>=0.8.0", "nanobind>=2.4.0", "numpy>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "event_camera_drivers"
version = "0.0.1"
description = "Event camera drivers in C++"
authors = [
    { name = "Jens Egholm Pedersen", email = "jens@jepedersen.dk" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++"
]
dependencies = [ "nanobind>=2.4", "numpy>=1.35" ]


[tool.scikit-build]
cmake.minimum-version = "3.15"
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
build-verbosity = 1

# Skip PyPy, 32-bit builds, and musllinux
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]

# Set platform-specific build configurations
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
